--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.3.0",
+    "expo": "^52.0.41",
+    "expo-status-bar": "^2.0.1",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "firebase": "^11.4.0",
