--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
-    "check": "tsc",
-    "db:push": "drizzle-kit push"
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "start": "vite preview",
+  "check": "tsc"
+},
   "dependencies": {
     "@anthropic-ai/sdk": "^0.36.3",
     "@hookform/resolvers": "^3.9.1",
