--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "start": "vite preview",
-  "check": "tsc"
-},
+    "dev": "vite",
+    "build": "vite build",
+    "start": "vite preview",
+    "check": "tsc",
+    "server": "tsx server/index.ts"
+  },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.36.3",
     "@hookform/resolvers": "^3.9.1",
@@ -43,10 +44,12 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@tanstack/react-query": "^5.60.5",
+    "@types/cors": "^2.8.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "connect-pg-simple": "^10.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
@@ -56,6 +59,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "firebase": "^11.4.0",
+    "firebase-functions": "^6.3.2",
     "framer-motion": "^11.13.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.453.0",
@@ -73,6 +77,7 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.0",
+    "vite-plugin-static-copy": "^2.3.0",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.23.8",
